# rosalina

./: .gitattributes  Cargo.toml  powerpc-nintendo-wii-freestanding-linker-script.ld  powerpc-nintendo-wii-freestanding.jq  powerpc-nintendo-wii-freestanding.json  rust-toolchain.toml
.cargo/: config.toml
cargo-luma/: Cargo.toml
cargo-luma/src/: args.rs  build.rs  main.rs
examples/basic/: Cargo.toml
examples/minimum/: Cargo.toml
examples/minimum/src/: main.rs
examples/wii/basic/: Cargo.toml
examples/wii/minimum/: Cargo.toml
rosalina/: Cargo.toml
rosalina/src/: exception.rs  interrupts.rs  main.rs
