[workspace]
members = [
    "cargo-luma",
    "examples/wii/basic",
    "examples/wii/minimum",
    "rosalina",
]

[workspace.dependencies]
cargo-luma = { path = "cargo-luma" }
rosalina = { path = "rosalina" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
panic = "abort"

[profile.host-release]
inherits = "release"
opt-level = 3
panic = "unwind"
